Project_2/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header variables body

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';'

    3 optional_parameters: parameters
    4                    | %empty

    5 parameters: parameter_declaration
    6           | parameter_declaration ',' parameters

    7 parameter_declaration: IDENTIFIER ':' type
    8                      | error

    9 variables: variable variables
   10          | %empty

   11 variable: IDENTIFIER ':' type IS statement_

   12 type: INTEGER
   13     | BOOLEAN
   14     | REAL

   15 body: BEGIN_ statement_ END ';'

   16 statement_: statement ';'
   17           | error ';'

   18 statement: expression
   19          | REDUCE operator reductions ENDREDUCE
   20          | if_statement
   21          | case_statement

   22 if_statement: IF expression THEN statement_ ELSE statement_ ENDIF

   23 case_statement: CASE IDENTIFIER IS case_clauses ENDCASE

   24 case_clauses: when_clause case_clauses
   25             | others_clause
   26             | %empty

   27 when_clause: WHEN INT_LITERAL ARROW statement_

   28 others_clause: OTHERS ARROW statement_

   29 operator: ADDOP
   30         | MULOP
   31         | REMOP

   32 reductions: reductions statement_
   33           | %empty

   34 expression: expression OROP and_relation
   35           | and_relation

   36 and_relation: and_relation ANDOP relation
   37             | relation

   38 relation: relation RELOP term
   39         | term

   40 term: term ADDOP factor
   41     | factor

   42 factor: factor MULOP exp_primary
   43       | factor REMOP exp_primary
   44       | exp_primary

   45 exp_primary: primary EXPOP exp_primary
   46            | primary

   47 primary: '(' expression ')'
   48        | INT_LITERAL
   49        | IDENTIFIER
   50        | REAL_LITERAL
   51        | BOOL_LITERAL
   52        | NOTOP primary


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 47
    ')' (41) 47
    ',' (44) 6
    ':' (58) 7 11
    ';' (59) 2 15 16 17
    error (256) 8 17
    IDENTIFIER (258) 2 7 11 23 49
    INT_LITERAL (259) 27 48
    ADDOP (260) 29 40
    MULOP (261) 30 42
    RELOP (262) 38
    ANDOP (263) 36
    BEGIN_ (264) 15
    BOOLEAN (265) 13
    END (266) 15
    ENDREDUCE (267) 19
    FUNCTION (268) 2
    INTEGER (269) 12
    IS (270) 11 23
    REDUCE (271) 19
    RETURNS (272) 2
    ARROW (273) 27 28
    REMOP (274) 31 43
    EXPOP (275) 45
    OROP (276) 34
    NOTOP (277) 52
    CASE (278) 23
    ELSE (279) 22
    ENDCASE (280) 23
    ENDIF (281) 22
    IF (282) 22
    OTHERS (283) 28
    REAL (284) 14
    THEN (285) 22
    WHEN (286) 27
    BOOL_LITERAL (287) 51
    REAL_LITERAL (288) 50


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    function (40)
        on left: 1
        on right: 0
    function_header (41)
        on left: 2
        on right: 1
    optional_parameters (42)
        on left: 3 4
        on right: 2
    parameters (43)
        on left: 5 6
        on right: 3 6
    parameter_declaration (44)
        on left: 7 8
        on right: 5 6
    variables (45)
        on left: 9 10
        on right: 1 9
    variable (46)
        on left: 11
        on right: 9
    type (47)
        on left: 12 13 14
        on right: 2 7 11
    body (48)
        on left: 15
        on right: 1
    statement_ (49)
        on left: 16 17
        on right: 11 15 22 27 28 32
    statement (50)
        on left: 18 19 20 21
        on right: 16
    if_statement (51)
        on left: 22
        on right: 20
    case_statement (52)
        on left: 23
        on right: 21
    case_clauses (53)
        on left: 24 25 26
        on right: 23 24
    when_clause (54)
        on left: 27
        on right: 24
    others_clause (55)
        on left: 28
        on right: 25
    operator (56)
        on left: 29 30 31
        on right: 19
    reductions (57)
        on left: 32 33
        on right: 19 32
    expression (58)
        on left: 34 35
        on right: 18 22 34 47
    and_relation (59)
        on left: 36 37
        on right: 34 35 36
    relation (60)
        on left: 38 39
        on right: 36 37 38
    term (61)
        on left: 40 41
        on right: 38 39 40
    factor (62)
        on left: 42 43 44
        on right: 40 41 42 43
    exp_primary (63)
        on left: 45 46
        on right: 42 43 44 45
    primary (64)
        on left: 47 48 49 50 51 52
        on right: 45 46 52


State 0

    0 $accept: . function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION . IDENTIFIER optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function . $end

    $end  shift, and go to state 5


State 3

    1 function: function_header . variables body

    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 10 (variables)

    variables  go to state 7
    variable   go to state 8


State 4

    2 function_header: FUNCTION IDENTIFIER . optional_parameters RETURNS type ';'

    error       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    RETURNS  reduce using rule 4 (optional_parameters)

    optional_parameters    go to state 11
    parameters             go to state 12
    parameter_declaration  go to state 13


State 5

    0 $accept: function $end .

    $default  accept


State 6

   11 variable: IDENTIFIER . ':' type IS statement_

    ':'  shift, and go to state 14


State 7

    1 function: function_header variables . body

    BEGIN_  shift, and go to state 15

    body  go to state 16


State 8

    9 variables: variable . variables

    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 10 (variables)

    variables  go to state 17
    variable   go to state 8


State 9

    8 parameter_declaration: error .

    $default  reduce using rule 8 (parameter_declaration)


State 10

    7 parameter_declaration: IDENTIFIER . ':' type

    ':'  shift, and go to state 18


State 11

    2 function_header: FUNCTION IDENTIFIER optional_parameters . RETURNS type ';'

    RETURNS  shift, and go to state 19


State 12

    3 optional_parameters: parameters .

    $default  reduce using rule 3 (optional_parameters)


State 13

    5 parameters: parameter_declaration .
    6           | parameter_declaration . ',' parameters

    ','  shift, and go to state 20

    $default  reduce using rule 5 (parameters)


State 14

   11 variable: IDENTIFIER ':' . type IS statement_

    BOOLEAN  shift, and go to state 21
    INTEGER  shift, and go to state 22
    REAL     shift, and go to state 23

    type  go to state 24


State 15

   15 body: BEGIN_ . statement_ END ';'

    error         shift, and go to state 25
    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    REDUCE        shift, and go to state 28
    NOTOP         shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    statement_      go to state 35
    statement       go to state 36
    if_statement    go to state 37
    case_statement  go to state 38
    expression      go to state 39
    and_relation    go to state 40
    relation        go to state 41
    term            go to state 42
    factor          go to state 43
    exp_primary     go to state 44
    primary         go to state 45


State 16

    1 function: function_header variables body .

    $default  reduce using rule 1 (function)


State 17

    9 variables: variable variables .

    $default  reduce using rule 9 (variables)


State 18

    7 parameter_declaration: IDENTIFIER ':' . type

    BOOLEAN  shift, and go to state 21
    INTEGER  shift, and go to state 22
    REAL     shift, and go to state 23

    type  go to state 46


State 19

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS . type ';'

    BOOLEAN  shift, and go to state 21
    INTEGER  shift, and go to state 22
    REAL     shift, and go to state 23

    type  go to state 47


State 20

    6 parameters: parameter_declaration ',' . parameters

    error       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    parameters             go to state 48
    parameter_declaration  go to state 13


State 21

   13 type: BOOLEAN .

    $default  reduce using rule 13 (type)


State 22

   12 type: INTEGER .

    $default  reduce using rule 12 (type)


State 23

   14 type: REAL .

    $default  reduce using rule 14 (type)


State 24

   11 variable: IDENTIFIER ':' type . IS statement_

    IS  shift, and go to state 49


State 25

   17 statement_: error . ';'

    ';'  shift, and go to state 50


State 26

   49 primary: IDENTIFIER .

    $default  reduce using rule 49 (primary)


State 27

   48 primary: INT_LITERAL .

    $default  reduce using rule 48 (primary)


State 28

   19 statement: REDUCE . operator reductions ENDREDUCE

    ADDOP  shift, and go to state 51
    MULOP  shift, and go to state 52
    REMOP  shift, and go to state 53

    operator  go to state 54


State 29

   52 primary: NOTOP . primary

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    primary  go to state 55


State 30

   23 case_statement: CASE . IDENTIFIER IS case_clauses ENDCASE

    IDENTIFIER  shift, and go to state 56


State 31

   22 if_statement: IF . expression THEN statement_ ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    expression    go to state 57
    and_relation  go to state 40
    relation      go to state 41
    term          go to state 42
    factor        go to state 43
    exp_primary   go to state 44
    primary       go to state 45


State 32

   51 primary: BOOL_LITERAL .

    $default  reduce using rule 51 (primary)


State 33

   50 primary: REAL_LITERAL .

    $default  reduce using rule 50 (primary)


State 34

   47 primary: '(' . expression ')'

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    expression    go to state 58
    and_relation  go to state 40
    relation      go to state 41
    term          go to state 42
    factor        go to state 43
    exp_primary   go to state 44
    primary       go to state 45


State 35

   15 body: BEGIN_ statement_ . END ';'

    END  shift, and go to state 59


State 36

   16 statement_: statement . ';'

    ';'  shift, and go to state 60


State 37

   20 statement: if_statement .

    $default  reduce using rule 20 (statement)


State 38

   21 statement: case_statement .

    $default  reduce using rule 21 (statement)


State 39

   18 statement: expression .
   34 expression: expression . OROP and_relation

    OROP  shift, and go to state 61

    $default  reduce using rule 18 (statement)


State 40

   35 expression: and_relation .
   36 and_relation: and_relation . ANDOP relation

    ANDOP  shift, and go to state 62

    $default  reduce using rule 35 (expression)


State 41

   37 and_relation: relation .
   38 relation: relation . RELOP term

    RELOP  shift, and go to state 63

    $default  reduce using rule 37 (and_relation)


State 42

   39 relation: term .
   40 term: term . ADDOP factor

    ADDOP  shift, and go to state 64

    $default  reduce using rule 39 (relation)


State 43

   41 term: factor .
   42 factor: factor . MULOP exp_primary
   43       | factor . REMOP exp_primary

    MULOP  shift, and go to state 65
    REMOP  shift, and go to state 66

    $default  reduce using rule 41 (term)


State 44

   44 factor: exp_primary .

    $default  reduce using rule 44 (factor)


State 45

   45 exp_primary: primary . EXPOP exp_primary
   46            | primary .

    EXPOP  shift, and go to state 67

    $default  reduce using rule 46 (exp_primary)


State 46

    7 parameter_declaration: IDENTIFIER ':' type .

    $default  reduce using rule 7 (parameter_declaration)


State 47

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type . ';'

    ';'  shift, and go to state 68


State 48

    6 parameters: parameter_declaration ',' parameters .

    $default  reduce using rule 6 (parameters)


State 49

   11 variable: IDENTIFIER ':' type IS . statement_

    error         shift, and go to state 25
    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    REDUCE        shift, and go to state 28
    NOTOP         shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    statement_      go to state 69
    statement       go to state 36
    if_statement    go to state 37
    case_statement  go to state 38
    expression      go to state 39
    and_relation    go to state 40
    relation        go to state 41
    term            go to state 42
    factor          go to state 43
    exp_primary     go to state 44
    primary         go to state 45


State 50

   17 statement_: error ';' .

    $default  reduce using rule 17 (statement_)


State 51

   29 operator: ADDOP .

    $default  reduce using rule 29 (operator)


State 52

   30 operator: MULOP .

    $default  reduce using rule 30 (operator)


State 53

   31 operator: REMOP .

    $default  reduce using rule 31 (operator)


State 54

   19 statement: REDUCE operator . reductions ENDREDUCE

    $default  reduce using rule 33 (reductions)

    reductions  go to state 70


State 55

   52 primary: NOTOP primary .

    $default  reduce using rule 52 (primary)


State 56

   23 case_statement: CASE IDENTIFIER . IS case_clauses ENDCASE

    IS  shift, and go to state 71


State 57

   22 if_statement: IF expression . THEN statement_ ELSE statement_ ENDIF
   34 expression: expression . OROP and_relation

    OROP  shift, and go to state 61
    THEN  shift, and go to state 72


State 58

   34 expression: expression . OROP and_relation
   47 primary: '(' expression . ')'

    OROP  shift, and go to state 61
    ')'   shift, and go to state 73


State 59

   15 body: BEGIN_ statement_ END . ';'

    ';'  shift, and go to state 74


State 60

   16 statement_: statement ';' .

    $default  reduce using rule 16 (statement_)


State 61

   34 expression: expression OROP . and_relation

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    and_relation  go to state 75
    relation      go to state 41
    term          go to state 42
    factor        go to state 43
    exp_primary   go to state 44
    primary       go to state 45


State 62

   36 and_relation: and_relation ANDOP . relation

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    relation     go to state 76
    term         go to state 42
    factor       go to state 43
    exp_primary  go to state 44
    primary      go to state 45


State 63

   38 relation: relation RELOP . term

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    term         go to state 77
    factor       go to state 43
    exp_primary  go to state 44
    primary      go to state 45


State 64

   40 term: term ADDOP . factor

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    factor       go to state 78
    exp_primary  go to state 44
    primary      go to state 45


State 65

   42 factor: factor MULOP . exp_primary

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    exp_primary  go to state 79
    primary      go to state 45


State 66

   43 factor: factor REMOP . exp_primary

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    exp_primary  go to state 80
    primary      go to state 45


State 67

   45 exp_primary: primary EXPOP . exp_primary

    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    NOTOP         shift, and go to state 29
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    exp_primary  go to state 81
    primary      go to state 45


State 68

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';' .

    $default  reduce using rule 2 (function_header)


State 69

   11 variable: IDENTIFIER ':' type IS statement_ .

    $default  reduce using rule 11 (variable)


State 70

   19 statement: REDUCE operator reductions . ENDREDUCE
   32 reductions: reductions . statement_

    error         shift, and go to state 25
    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    ENDREDUCE     shift, and go to state 82
    REDUCE        shift, and go to state 28
    NOTOP         shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    statement_      go to state 83
    statement       go to state 36
    if_statement    go to state 37
    case_statement  go to state 38
    expression      go to state 39
    and_relation    go to state 40
    relation        go to state 41
    term            go to state 42
    factor          go to state 43
    exp_primary     go to state 44
    primary         go to state 45


State 71

   23 case_statement: CASE IDENTIFIER IS . case_clauses ENDCASE

    OTHERS  shift, and go to state 84
    WHEN    shift, and go to state 85

    $default  reduce using rule 26 (case_clauses)

    case_clauses   go to state 86
    when_clause    go to state 87
    others_clause  go to state 88


State 72

   22 if_statement: IF expression THEN . statement_ ELSE statement_ ENDIF

    error         shift, and go to state 25
    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    REDUCE        shift, and go to state 28
    NOTOP         shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    statement_      go to state 89
    statement       go to state 36
    if_statement    go to state 37
    case_statement  go to state 38
    expression      go to state 39
    and_relation    go to state 40
    relation        go to state 41
    term            go to state 42
    factor          go to state 43
    exp_primary     go to state 44
    primary         go to state 45


State 73

   47 primary: '(' expression ')' .

    $default  reduce using rule 47 (primary)


State 74

   15 body: BEGIN_ statement_ END ';' .

    $default  reduce using rule 15 (body)


State 75

   34 expression: expression OROP and_relation .
   36 and_relation: and_relation . ANDOP relation

    ANDOP  shift, and go to state 62

    $default  reduce using rule 34 (expression)


State 76

   36 and_relation: and_relation ANDOP relation .
   38 relation: relation . RELOP term

    RELOP  shift, and go to state 63

    $default  reduce using rule 36 (and_relation)


State 77

   38 relation: relation RELOP term .
   40 term: term . ADDOP factor

    ADDOP  shift, and go to state 64

    $default  reduce using rule 38 (relation)


State 78

   40 term: term ADDOP factor .
   42 factor: factor . MULOP exp_primary
   43       | factor . REMOP exp_primary

    MULOP  shift, and go to state 65
    REMOP  shift, and go to state 66

    $default  reduce using rule 40 (term)


State 79

   42 factor: factor MULOP exp_primary .

    $default  reduce using rule 42 (factor)


State 80

   43 factor: factor REMOP exp_primary .

    $default  reduce using rule 43 (factor)


State 81

   45 exp_primary: primary EXPOP exp_primary .

    $default  reduce using rule 45 (exp_primary)


State 82

   19 statement: REDUCE operator reductions ENDREDUCE .

    $default  reduce using rule 19 (statement)


State 83

   32 reductions: reductions statement_ .

    $default  reduce using rule 32 (reductions)


State 84

   28 others_clause: OTHERS . ARROW statement_

    ARROW  shift, and go to state 90


State 85

   27 when_clause: WHEN . INT_LITERAL ARROW statement_

    INT_LITERAL  shift, and go to state 91


State 86

   23 case_statement: CASE IDENTIFIER IS case_clauses . ENDCASE

    ENDCASE  shift, and go to state 92


State 87

   24 case_clauses: when_clause . case_clauses

    OTHERS  shift, and go to state 84
    WHEN    shift, and go to state 85

    $default  reduce using rule 26 (case_clauses)

    case_clauses   go to state 93
    when_clause    go to state 87
    others_clause  go to state 88


State 88

   25 case_clauses: others_clause .

    $default  reduce using rule 25 (case_clauses)


State 89

   22 if_statement: IF expression THEN statement_ . ELSE statement_ ENDIF

    ELSE  shift, and go to state 94


State 90

   28 others_clause: OTHERS ARROW . statement_

    error         shift, and go to state 25
    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    REDUCE        shift, and go to state 28
    NOTOP         shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    statement_      go to state 95
    statement       go to state 36
    if_statement    go to state 37
    case_statement  go to state 38
    expression      go to state 39
    and_relation    go to state 40
    relation        go to state 41
    term            go to state 42
    factor          go to state 43
    exp_primary     go to state 44
    primary         go to state 45


State 91

   27 when_clause: WHEN INT_LITERAL . ARROW statement_

    ARROW  shift, and go to state 96


State 92

   23 case_statement: CASE IDENTIFIER IS case_clauses ENDCASE .

    $default  reduce using rule 23 (case_statement)


State 93

   24 case_clauses: when_clause case_clauses .

    $default  reduce using rule 24 (case_clauses)


State 94

   22 if_statement: IF expression THEN statement_ ELSE . statement_ ENDIF

    error         shift, and go to state 25
    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    REDUCE        shift, and go to state 28
    NOTOP         shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    statement_      go to state 97
    statement       go to state 36
    if_statement    go to state 37
    case_statement  go to state 38
    expression      go to state 39
    and_relation    go to state 40
    relation        go to state 41
    term            go to state 42
    factor          go to state 43
    exp_primary     go to state 44
    primary         go to state 45


State 95

   28 others_clause: OTHERS ARROW statement_ .

    $default  reduce using rule 28 (others_clause)


State 96

   27 when_clause: WHEN INT_LITERAL ARROW . statement_

    error         shift, and go to state 25
    IDENTIFIER    shift, and go to state 26
    INT_LITERAL   shift, and go to state 27
    REDUCE        shift, and go to state 28
    NOTOP         shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    BOOL_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    '('           shift, and go to state 34

    statement_      go to state 98
    statement       go to state 36
    if_statement    go to state 37
    case_statement  go to state 38
    expression      go to state 39
    and_relation    go to state 40
    relation        go to state 41
    term            go to state 42
    factor          go to state 43
    exp_primary     go to state 44
    primary         go to state 45


State 97

   22 if_statement: IF expression THEN statement_ ELSE statement_ . ENDIF

    ENDIF  shift, and go to state 99


State 98

   27 when_clause: WHEN INT_LITERAL ARROW statement_ .

    $default  reduce using rule 27 (when_clause)


State 99

   22 if_statement: IF expression THEN statement_ ELSE statement_ ENDIF .

    $default  reduce using rule 22 (if_statement)
